# weekly77

./: LICENSE  README.md
app/cart01/: Cargo.toml  Makefile  QUICKSTART.md  README.md  README_for_pdf.md  README_for_pdf_clean.md  README_pdf.md  RUST_CHEATSHEET_TABLE.md  book-template.tex  cover.tex  header.tex  pandoc README.sh  pandoc_template.latex  rust_cheatsheet_cover.html
app/cart01/assets/diagrams/: ownership_diagram.mmd  validation_flow.mmd
app/cart01/scripts/: build_book.sh  process_readme.js
app/cart01/src/: lib.rs  main.rs
app/src02/: .env.example  COMPLETION_SUMMARY.md  Cargo.toml  MANIFEST.txt  Makefile  README.md  ReadmeES.md  ReadmeITA.md
app/src02/src/: catalog.rs  lib.rs  main.rs  models.rs  persistence.rs  usage.rs
app/src02/tests/: catalog_tests.rs  integration_tests.rs  persistence_tests.rs
app/src03_leptos/: IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_STATUS.md  QUICK_REFERENCE.md  QUICK_START.sh  README.md  THEMES_DOCUMENTATION.md  docker-compose.yml
app/src03_leptos/backend/: Cargo.toml  Dockerfile  README.md
app/src03_leptos/backend/src/: api.rs  db.rs  images.rs  lib.rs  main.rs
app/src03_leptos/frontend/: Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html
app/src03_leptos/frontend/css/: style-dark.css  style-default.css  style-light.css  style-modern.css
app/src03_leptos/frontend/src/: lib.rs  main.rs  main_wasm.rs
app/src03_leptos/frontend/src/components/: admin.rs  mod.rs  ui.rs
app/src03_leptos/frontend/src/pages/: admin.rs  mod.rs  shop.rs
app/srv/src/: lib.rs
