[package]
name = "src03_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8", features = ["macros", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
image = "0.24"
anyhow = "1.0"
tracing-subscriber = "0.3"
hyper = { version = "0.14", features = ["server"] }
tokio-util = "0.7"
multipart = "0.18"
lazy_static = "1.4"
walkdir = "2.3"
path-absolutize = "2.0"

# Note: This crate is a scaffold. See README for run instructions.
