[package]
name = "src03_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.5", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"

[[bin]]
name = "src03_frontend"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
